A controller avant publication

--- a/Bento8/config.properties
+++ b/Bento8/config.properties
@@ -1,4 +1,19 @@
+# Configuration du BuildBootDisk
+# ******************************
+
+# le fichier bootfile contient le code assembleur qui sera encodé dans le
+# secteur d'amorçage
 bootfile=./ASM/BOOT.ASM
+
+# le fichier mainfile contient le code assembleur qui sera chargé depuis
+# la disquette par le code d'amorçage et implanté dans la mémoire vive
+# pour y être exécuté
 mainfile=./ASM/MAIN.ASM
-outputfile=./out/DISK
+
+# le fichier outputfile est le nom qui sera donné aux fichiers .fd et .sd
+# qui seront produits en sortie
+outputfile=./out/DISK2
+
+# indiquer dans la balise compiler l'executable à utiliser pour la compilation
+# du code pour Thomson TO8
 compiler=c6809.exe
