Recherche sur la sequence de boot du moniteur

--- a/Bento8/config.properties
+++ b/Bento8/config.properties
@@ -12,7 +12,7 @@ mainfile=./ASM/MAIN.ASM
 
 # le fichier outputfile est le nom qui sera donné aux fichiers .fd et .sd
 # qui seront produits en sortie
-outputfile=./out/DISK2
+outputfile=./out/DISK
 
 # indiquer dans la balise compiler l'executable à utiliser pour la compilation
 # du code pour Thomson TO8
